# wrap-notes

./: Cargo.toml  clients.txt  collaterals.txt  decrypt_attempt_goal.txt  general_collaterals.txt  goals.txt  note.txt  note_days.txt  note_templates.txt  pronouns.txt  test_client.txt  test_collateral.txt  test_load_clients.txt  test_load_clients_from_user.txt  test_load_general_collateral.txt  test_load_user.txt  test_note_days.txt  test_note_templates.txt  test_user.txt  test_users.txt  users.txt
src/: blank_enums.rs  client.rs  collateral.rs  constants.rs  goal.rs  lib.rs  main.rs  note.rs  note_archive.rs  note_day.rs  pronouns.rs  user.rs  utils.rs
tests/: integration_tests.rs
